# RustEbookManager

./: CMakeLists.txt  README.md  corrosion_cxx.cmake
cpp/: homemodel.cpp  homemodel.h  librarymodel.cpp  librarymodel.h  main.cpp  rustutil.cpp  rustutil.h
headers/: homemodel.h  librarymodel.h  rustutil.h
qml/: AddLibrary.qml  AudiobookPlayer.qml  EpubReader.qml  HomeView.qml  HomeViewDelegate.qml  LibraryView.qml  LibraryViewDelegate.qml  PDFReader.qml  main.qml
qml/PDFReader/: PDFFooter.qml  PDFReader.qml  PDFSidebar.qml
rust/: Cargo.toml
rust/client_lib/: Cargo.toml  build.rs
rust/client_lib/src/: constant.rs  db.rs  home_model.rs  lib.rs  library_model.rs  parser.rs
rust/client_lib/src/db/: home_db.rs  library_db.rs
rust/client_lib/src/parser/: epubparser.rs  pdfparser.rs
rust/cxx_layer/: Cargo.toml  build.rs
rust/cxx_layer/src/: home_model_cxx.rs  lib.rs  library_model_cxx.rs
web/: epubreader.html
