[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#![allow(dead_code)]
#![allow(warnings)]
#![warn(unused_imports)]
[dependencies]
#sqlite = "0.30.3"

directories = "4.0.1"
walkdir = "2.3.2"
lazy_static = "1.4.0"


tokio = { version = "1.25.0", features = ["full"] }

rusqlite = { version = "0.28.0", features = ["bundled"] }
futures = "0.3"
epub = "2.0.0"
resize = "0.7.4"
image = "0.24.5"
once_cell = "1.17.1"
pdf = "0.8.0"
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]



# Unused crates
#audiotags = "0.4.1"
#env_logger = "0.10.0"
#log = "0.4.0"
